--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/wjinfeng/crud-express#readme",
   "dependencies": {
     "art-template": "^4.13.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
     "express-art-template": "^1.0.1"
