--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
-    "express-art-template": "^1.0.1"
+    "express-art-template": "^1.0.1",
+    "mongoose": "^5.10.2"
   }
 }
